22 Dec big Update
here i updated special tours and add more 8 days tour

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>跟著我們探索吉爾吉斯</title>
-
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="guest.review.css" />
     <link rel="stylesheet" href="des-link.css" />
     <link rel="stylesheet" href="overnights.css" />
     <link rel="stylesheet" href="welcome-uz.css" />
+    <link rel="stylesheet" href="other-tours.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
@@ -67,9 +67,7 @@
                   <a href="tours.html" class="dropdown-link">KYRGYZSTAN</a>
                 </li>
                 <li>
-                  <a href="eight-days-tour.html" class="dropdown-link"
-                    >UZBEKSTAN</a
-                  >
+                  <a href="uzbekstan.html" class="dropdown-link">UZBEKSTAN</a>
                 </li>
               </ul>
             </li>
@@ -290,14 +288,13 @@
             <div class="tour-col">
               <img loading="lazy" src="images/7-days-tour.jpg" alt="" />
               <h4>
-                7 天夏 經典行程 &nbsp; &nbsp; &nbsp; &nbsp;<span
+                經典七天 罌粟花海 &nbsp; &nbsp; &nbsp; &nbsp;<span
                   class="tours-date"
-                  >拼團日期</span
-                >
+                ></span>
               </h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>7 Days Trip</p>
+                <p>Poppy Blossom</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
@@ -309,28 +306,15 @@
             </div>
           </a>
 
-          <a href="kyrgyzs-hospitality.html">
+          <a href="classic-eight-days.html">
             <div class="tour-col">
-              <img loading="lazy" src="images/cooking-oneday-tour.jpg" alt="" />
-              <h4>體驗當地美食</h4>
-              <div class="tour-days">
-                <i class="fa fa-location-arrow"></i>
-                <p>1 Days Trip</p>
-                <div class="testimonial-starts-tour">
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </a>
+              <img loading="lazy" src="images/classic-8 days.png" alt="" />
+              <h4>
+                經典八天 頌湖&nbsp; &nbsp; &nbsp; &nbsp;<span class="tours-date"
+                  >Song-Kul</span
+                >
+              </h4>
 
-          <a href="eight-days-tour.html">
-            <div class="tour-col">
-              <img loading="lazy" src="images/autmn-tours.jpg" alt="" />
-              <h4>8天秋 客製化行程 coming soon!</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
                 <p>8 Days Trip</p>
@@ -344,6 +328,155 @@
               </div>
             </div>
           </a>
+
+          <a href="8-days-migration.html">
+            <div class="tour-col">
+              <img loading="lazy" src="images/8 days migration.jpg" alt="" />
+              <h4>
+                經典八天＋動物大遷移(第三天)&nbsp; &nbsp; &nbsp; &nbsp;<span
+                  class="tours-date"
+                ></span>
+              </h4>
+              <div class="tour-days">
+                <i class="fa fa-location-arrow"></i>
+                <p>一年一團</p>
+                <div class="testimonial-starts-tour">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!---------- Small tours ----------->
+
+    <section class="testimonial-small-tours">
+      <div class="slider-container swiper">
+        <div class="testimonial-title">
+          <div class="food-title-div">
+            <h1>Special Tours</h1>
+            <p class="food-description"></p>
+          </div>
+        </div>
+        <div class="slider-content">
+          <div class="card-wrapper swiper-wrapper">
+            <div class="food-card swiper-slide">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="food-card-image">
+                  <img
+                    loading="lazy"
+                    src="images/nooryz.jpg"
+                    class="card-img"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="card-content-1-small">
+                <h2 class="name">諾魯茲新年慶典</h2>
+                <h4>七天</h4>
+
+                <a
+                  href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
+                  class="small-tours-btn"
+                  data-swiper-no-swiping
+                  >點入看行程</a
+                >
+                <div class="small-tours-highlights">
+                  <h4>特色</h4>
+                  <p class="testimonial-description">
+                    諾魯茲節是吉爾吉斯的新年，根植於薩滿文化與游牧傳統。
+                    蘇姆洛克Sumolok 製作：
+                    一道特別的傳統料理，三天三夜的精心烹煮。
+                    騎馬比賽，來自吉爾吉斯七個地區隊伍的比賽。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="food-card swiper-slide">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="food-card-image">
+                  <img
+                    loading="lazy"
+                    src="images/off road.png"
+                    class="card-img"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="card-content-1-small">
+                <h2 class="name">越野之旅</h2>
+                <h4>七天</h4>
+
+                <a
+                  href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
+                  class="small-tours-btn"
+                  data-swiper-no-swiping
+                  >點入看行程</a
+                >
+
+                <div class="small-tours-highlights">
+                  <h4>特色</h4>
+                  <p class="testimonial-description">
+                    通過越野車抵達前往山區牧場和偏遠湖泊，深入體驗真正的游牧生活。
+                    探索壯麗的阿克賽山谷（Ak Sai
+                    Valley），騎馬前往位於海拔3500米的克蘇湖（Kel-Suu Lake
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="food-card swiper-slide">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="food-card-image">
+                  <img
+                    loading="lazy"
+                    src="images/pamir.png"
+                    class="card-img"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="card-content-1-small">
+                <h2 class="name">帕米爾高原</h2>
+                <h4>五天</h4>
+
+                <a
+                  href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
+                  class="small-tours-btn"
+                  data-swiper-no-swiping
+                  >點入看行程</a
+                >
+
+                <div class="small-tours-highlights">
+                  <h4>特色</h4>
+                  <p class="testimonial-description">
+                    吉爾吉斯南部的獨特魅力，融合了游牧與定居文化的精彩面貌
+                    具挑戰性約6.5小時的徒步旅行者之路（Traveler’s Pass）
+                    在圖帕湖（Tulpar
+                    Lake）旁的蒙古包內，欣賞壯麗的列寧峰（海拔7,134米）的迷人景色。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="swiper-button-next swiper-navBtn small-swiper-navBtn"
+          ></div>
+          <div
+            class="swiper-button-prev swiper-navBtn small-swiper-navBtn"
+          ></div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
@@ -365,7 +498,9 @@
                 烏茲別克斯坦將成為我們的新旅遊目的地！2025年起，與我們一起探索這個充滿歷史與文化魅力的美麗國度。敬請期待！✨
               </p>
               <div class="about-uz-btn">
-                <a href="#" class="red-hero-btn red-btn">Coming soon</a>
+                <a href="uzbekstan.html" class="red-hero-btn red-btn"
+                  >Coming soon</a
+                >
               </div>
             </div>
           </div>
@@ -700,225 +835,6 @@
     </section>
 
     <!---------- more information Q&A ----------->
-
-    <section class="quastion-answers">
-      <h2 class="title">FAQs</h2>
-      <div class="faq">
-        <div class="question">
-          <h3>拼團和包團有什麼不一樣？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            今年6-9月每個月都有開團，拼團一個人也可以參加，
-            拼團最終費用以報名人數決定。 旅行也可以認識新朋友！
-            包團兩人以上可報名，能自行決定日期，推薦七天經典行程，
-            行程可依客人喜好作微調。 請私訊我們討論細節，再提供報價。
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>什麼季節適合去吉爾吉斯？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            四季分明的吉爾吉斯，每個月份能體會不同的季節變化。第一次推薦大家6-9月造訪，夏天山谷一片綠油油，5-25度的高山氣溫也相對舒適。
-            10月開始秋天可以賞楓騎馬，冬天也有滑雪行程，比歐美日本便宜很多唷！
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>請問夏天的氣溫如何？會很熱嗎？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              path="red"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            夏天是最適合旅行吉爾吉斯的季節，山上晚上溫差很大，保暖的帽子襪子和吸濕排汗的衣服都建議攜帶。
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>需要攜帶什麼登山裝備嗎？還是輕裝就可以了？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            來吉爾吉斯需要有一雙好走的鞋，每次徒步約2-3小時， 一般等級，
-            建議一個月前可以練習快走，小小鍛鍊一下體能！
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>請問航班你們有建議的嗎？你們可以代購機票嗎？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            航班推薦轉機土耳其和杜拜轉機，不過今年開始新增了中國和韓國轉機的選項，建議多看看唷，機票請自行購買或請台灣旅行社代買。
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>為什麼中亞國家推薦吉爾吉斯單國深度旅行？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            吉爾吉斯是台灣的五倍大，山路迂迴，身體需要適應，也更適合用慢步調來感受大自然
-            。
-            走馬看花五個中亞國家踩點打卡不是我們的旅行風格，考慮到大家的假期安排和航班來回，經典七天行程不算長
-            ，但是滿滿充實的行程，
-            可以讓旅客感受到道地遊牧生活，鍛鍊體力爬山騎馬之外，也能好好放鬆。
-          </p>
-        </div>
-      </div>
-      <div class="faq">
-        <div class="question">
-          <h3>提前抵達或希望行程結束後想要多留幾天，可以代訂飯店嗎？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            本行程可延長住宿天數，代訂Bishkek Freedom Hotel
-            一晚一間房含早餐70美金或是也推薦大家可以在伊賽克湖度假幾天,
-            夏天游泳超棒的喔！
-          </p>
-        </div>
-      </div>
-      <div class="faq">
-        <div class="question">
-          <h3>有幾次騎馬的機會呢？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            經典七天行程中一次騎馬在Chon Kemin約2-3
-            小時，如還想體驗騎馬可以在Song kul 頌湖，一小時15 美金的費用。
-          </p>
-        </div>
-      </div>
-      <div class="faq">
-        <div class="question">
-          <h3>7日內會有網路訊號嗎？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            七天當中約有2-3天在高山完全沒有訊號，讓自己沈靜在大自然裡休息，徹底放空，享受過程！另外可以幫大家代購網卡，一張七天
-            16GB，10美元。
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3>如何報名和支付團費？</h3>
-
-          <svg width="15" height="10" viewBox="0 0 42 25">
-            <path
-              d="M3 3L21 21L39 3"
-              stroke="black"
-              stroke-width="7"
-              stroke-linecap="round"
-            />
-          </svg>
-        </div>
-        <div class="answer">
-          <p>
-            兩個月前會確定是否開團， 1填寫報名表格 2 繳交訂金 3
-            提供護照辦理簽證，訂金金額：400美金，每人 Paypal 線上刷卡
-            （我們的旅行社在吉爾吉斯，無法接受台幣轉帳。餘款請第一天到當地支付美金現金給導遊
-          </p>
-        </div>
-      </div>
-      <p>
-        如果您有任何的問題，可以與我們保持聯繫，我們可以盡量提供您相關必要的訊息，謝謝您！）
-      </p>
-    </section>
 
     <!---------- Why Choose Us  ----------->
     <section class="why-us">
