--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -34,6 +34,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="overnights.css" />
 
     <script
       defer
@@ -70,14 +71,14 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>7 天夏 經典行程</h1>
+      <h1>7 Days Poppy Blossom</h1>
     </section>
 
     <!---------- Tour gallery ----------->
 
     <section class="tour-section">
       <div class="gallery-container">
-        <h1>Poppy Flower Classic 7-Day Tour 罌粟花季 經典七天行程</h1>
+        <h1>經典七天 罌粟花海</h1>
 
         <div class="gallery">
           <a class="box a" href="images-7-day-tour-section/arashan-1.jpg">
@@ -231,16 +232,12 @@
       <div class="description-highlights-map">
         <div class="description-highlights">
           <div class="description">
-            <h2>
-              包團兩人以上成行， 4/28-5/28 花季，行程可依客人興趣微調。 <br />
-            </h2>
+            <h3>
+              拼團日期 一人也可以參加 （12人滿團） April 28 / May 12 <br />
+            </h3>
           </div>
           <div class="description">
-            <h2>拼團一個人也可以參加。</h2>
-            <p>
-              &nbsp; &nbsp; April 28 - May 6 七天&nbsp; &nbsp; &nbsp; &nbsp; May
-              12 - 19 七天&nbsp; &nbsp;
-            </p>
+            <h3>包團兩人以上成行，隨時出發 日期 April 28 - June 5</h3>
           </div>
           <div class="description">
             <h2>Description</h2>
@@ -259,14 +256,19 @@
           <div class="highlights">
             <h2>Highlights</h2>
             <ul class="highlights-ul">
-              <li>Horse-Riding in Stunning Mountains</li>
-              <li>Eagle Show with Hunting Skills</li>
-              <li>Trekking and Hiking in Scenic Trails</li>
-              <li>Relaxing in Natural Hot Springs</li>
-              <li>Overnight Stay in a Cozy Yurt</li>
-              <li>Create Handmade Felt Carpets</li>
-              <li>Taste Delicious Kyrgyz Cuisine</li>
-              <li>Photograph Scenic Poppy Flower Landscapes</li>
+              <li>罌粟花海行程亮點：</li>
+              <li>罌粟花盛開：</li>
+              <li>欣賞壯觀的罌粟花田盛開，令人驚嘆的自然美景。</li>
+              <li>入住蒙古包：</li>
+              <li>
+                體驗科克賈伊克草原上的傳統吉爾吉斯蒙古包的魅力與熱情款待。
+              </li>
+              <li>鷹獵與地毯表演：</li>
+              <li>欣賞令人著迷的鷹獵表演以及傳統地毯編織展示。</li>
+              <li>伊塞克湖遊船：</li>
+              <li>乘坐遊船，悠閒地欣賞壯美的伊塞克湖風光。</li>
+              <li>喬爾蓬阿塔俄羅斯市場：</li>
+              <li>探索僅在週六和週日開放的俄羅斯市場，享受獨特的購物體驗。</li>
             </ul>
           </div>
         </div>
@@ -626,39 +628,103 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="itinerary-day-cal">
-            <div class="itinerary-question">
-              <h3>Day 8 - Transfer Airport</h3>
-              <p></p>
-
-              <svg width="15" height="10" viewBox="0 0 42 25">
-                <path
-                  d="M3 3L21 21L39 3"
-                  stroke="black"
-                  stroke-width="7"
-                  stroke-linecap="round"
+      <!---------- Accommodation  ----------->
+      <div class="overnight-hotels">
+        <button class="prev-button">❮</button>
+        <div class="slider-wrapper slider-wrapper-2">
+          <div class="overnight-slider">
+            <div class="slide slide-3">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/Kok-Archa Guesthouse.png"
+                  alt="Overnight Son Kol"
                 />
-              </svg>
-            </div>
-            <div class="itinerary-answer">
-              <div class="row-2">
-                <div class="about-tour-col">
-                  <img loading="lazy" src="image-itinerary/day 8.jpeg" />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Kok-Archa Guesthouse</h3>
+                  <p></p>
                 </div>
+              </div>
+            </div>
+            <div class="slide slide-4">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/Guest House Jekshen.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Guest House Jekshen</h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            <div class="slide slide-5">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/8-Matsunoki Japanese house.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Matsunoki Japanese house</h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            <div class="slide slide-6">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/8-Altyn Oimok guest house.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Altyn Oimok guest house</h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            <div class="slide slide-7">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/8-Guest House Emily.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Guest House Emily</h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
 
-                <div class="about-tour-col">
-                  <div class="about-tour-col-info">
-                    <p>
-                      Transfer to Airport end of Kyrgyzstan highlights tour.
-                    </p>
-                  </div>
+            <div class="slide slide-9">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/8-Crown hotel.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Bishkek :Crown hotel</h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            <div class="slide slide-10">
+              <div class="slide-img slide-img-2">
+                <img
+                  src="accommodation/8-Bishkek_ Freedom.png"
+                  alt="Overnight Son Kol"
+                />
+                <div class="text-overlay text-overlay-2">
+                  <h3>Bishkek: Freedom hotel</h3>
+                  <p></p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+        <button class="next-button">❯</button>
+      </div>
 
       <!---------- important about tour info ----------->
 
@@ -1185,109 +1251,6 @@
         </div>
       </section>
 
-      <!---------- Accommodation  ----------->
-      <section class="accommodation">
-        <h1>住宿照片參考</h1>
-        <p>Accommodation</p>
-
-        <div>
-          <div class="accommodation-list">
-            <h3>Bishkek :Crown hotel</h3>
-            <img loading="lazy" src="accommodation/Crown hotel.png" alt="" />
-            <p></p>
-          </div>
-
-          <div class="accommodation-list">
-            <h3>Bishkek: Freedom</h3>
-            <img loading="lazy" src="accommodation/Freedom.png" alt="" />
-            <p></p>
-          </div>
-
-          <div class="accommodation-list">
-            <h3>Chon kemin: Jekshen Guest house</h3>
-            <div class="accommodation-info">
-              <img
-                loading="lazy"
-                src="accommodation/Jekshen Guest house.png"
-                alt=""
-              />
-              <div class="accommodation-h3-p">
-                <p>
-                  Jekshen guest house is located in Chon Kemin national park.
-                  There's a private entrance at the guest house for the
-                  convenience of those who stay. The guest house also features
-                  free Wifi, free private parking, and facilities for disabled
-                  guests. There's a private bathroom with walk-in shower in some
-                  units, along with slippers, a hair dryer, and free toiletries.
-                  Continental and Asian breakfast is available.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="accommodation-list">
-            <h3>Karakol: Matsunoki Japanese house</h3>
-            <div class="accommodation-info">
-              <img
-                loading="lazy"
-                src="accommodation/Matsunoki Japanese house.png"
-                alt=""
-              />
-
-              <div class="accommodation-h3-p">
-                <p>
-                  Matsunoki provides accommodations in Karakol. Among the
-                  facilities at this property are luggage storage space and
-                  daily room service, along with free Wifi throughout the
-                  property. The guest house offers some units with mountain
-                  views, and units are equipped with a private bathroom. At the
-                  guest house, some units are allergy-free. Kyrgyz breakfast is
-                  available.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="accommodation-list">
-            <h3>Kok Jaiyk pasture: Taberik yurt camp</h3>
-            <div class="accommodation-info">
-              <img
-                loading="lazy"
-                src="accommodation/Taberik yurt camp.png"
-                alt=""
-              />
-
-              <div class="accommodation-h3-p">
-                <p>
-                  Taberik yurt camp located in Kok Jaiyk pasture. It's the only
-                  one yurt camp which stays 4 season in this area. There are 2-4
-                  beds yurts available. Equipet shared bathroom outside of the
-                  yurts with a hair dryer, each yurt includes bed linen and
-                  towels. Kyrgyz breakfast is available.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="accommodation-list">
-            <h3>Bokonbayev village: Altyn oimok</h3>
-            <div class="accommodation-info">
-              <img loading="lazy" src="accommodation/Altyn oimok.png" alt="" />
-
-              <div class="accommodation-h3-p">
-                <p>
-                  Taberik yurt camp located in Kok Jaiyk pasture. It's the only
-                  one yurt camp which stays 4 season in this area. There are 2-4
-                  beds yurts available. Equipet shared bathroom outside of the
-                  yurts with a hair dryer, each yurt includes bed linen and
-                  towels. Kyrgyz breakfast is available.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <!---------- Car  ----------->
       <section class="accommodation">
         <h1>八人以上小巴士參考</h1>
@@ -1391,6 +1354,7 @@
       defer
       src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"
     ></script>
+    <script src="overnight-hotel.js"></script>
 
     <script>
       var navLinks = document.getElementById("navLinks");
