--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                 <h4>七天</h4>
 
                 <a
+                  target="_blank"
                   href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
                   class="small-tours-btn"
                   data-swiper-no-swiping
@@ -417,6 +418,7 @@
                 <h4>七天</h4>
 
                 <a
+                  target="_blank"
                   href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
                   class="small-tours-btn"
                   data-swiper-no-swiping
@@ -451,6 +453,7 @@
                 <h4>五天</h4>
 
                 <a
+                  target="_blank"
                   href="https://kyrgyzstan-tour.notion.site/2025-BekRuby-155e583a17c180debecaf74a699e8a0e"
                   class="small-tours-btn"
                   data-swiper-no-swiping
